# ScatteringRadiation

./: .gitignore  CMakeLists.txt  README  README.md
include/ScatteringRadiation/: Action.h  Beam.h  Construction.h  Event.h  Foil.h  Functions.h  Run.h  SensitiveSurface.h  Stepping.h  Track.h
plotting/: plot_analysis.py  plot_detailed_study.py  plot_gaussian_fit.py  plot_thickness_comparisons.py
src/: Action.cxx  Beam.cxx  Construction.cxx  Event.cxx  Foil.cxx  Functions.cxx  Run.cxx  SensitiveSurface.cxx  Stepping.cxx  Track.cxx  analyze_data.cxx  predict_distributions.cxx  run_beam.cxx
tools/: setup.sh.in
